@@ -6,6 +6,7 @@
 * Implemented TruePeak meter.
 * Implemented Panorama meter (Panometer).
 * Implemented ScaledMeterGraph with subsampling option.
+* Implemented QuantizedCounter statistics tool.
 * Several fixes and improvements in RawRingBuffer.
 
 === 1.0.26 ===
